# Copyright (c) 2012, Mao Jianjun <justmao945@gmail.com>
# 
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
# 
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN 
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.


# Root CMakeLists.txt

# Compiler properties.
SET(CMAKE_C_COMPILER "clang")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99")

#IF(NOT CMAKE_BUILD_TYPE)
#  SET(CMAKE_BUILD_TYPE "Release")
#ENDIF(NOT CMAKE_BUILD_TYPE)

# Project properties
PROJECT(TheCLibrary C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(YACL_MAJOR 0)
SET(YACL_MINOR 1)
SET(YACL_MICRO 0)

SET(BUILD_TESTING "ON")
ADD_SUBDIRECTORY(yacl)  # headers
ADD_SUBDIRECTORY(src)   # sources
ADD_SUBDIRECTORY(test)  # testsuit
ADD_SUBDIRECTORY(raw-test)  # raw test directory

