# Copyright (c) 2012, Mao Jianjun <justmao945@gmail.com>
# 
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
# 
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN 
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

#
# Raw Testing directory CMakeLists.txt

IF(BUILD_TESTING)
  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
  
  FILE(GLOB TEST_UNITS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
  FOREACH(TEST_UNIT ${TEST_UNITS})
    GET_FILENAME_COMPONENT(TEST_UNIT ${TEST_UNIT} NAME)
    MESSAGE(STATUS "Adding raw-test unit: ${TEST_UNIT}")
    STRING(REGEX REPLACE ".c\$" ".out" TEST_UNIT_OUT "${TEST_UNIT}")
  
    ADD_EXECUTABLE(${TEST_UNIT_OUT} ${TEST_UNIT})
    TARGET_LINK_LIBRARIES(${TEST_UNIT_OUT} yacl)
  
    ADD_EXECUTABLE(${TEST_UNIT_OUT}_s ${TEST_UNIT})
    TARGET_LINK_LIBRARIES(${TEST_UNIT_OUT}_s yacl_s)
  ENDFOREACH(TEST_UNIT)
ENDIF(BUILD_TESTING)

