# Copyright (c) 2012, Mao Jianjun <justmao945@gmail.com>
# 
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
# 
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN 
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

#
# Source directory CMakeLists.txt

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

FILE(GLOB SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
ADD_LIBRARY(yacl SHARED ${SRC})
TARGET_LINK_LIBRARIES(yacl m)

ADD_LIBRARY(yacl_s STATIC ${SRC})
TARGET_LINK_LIBRARIES(yacl_s m)

SET_TARGET_PROPERTIES(yacl PROPERTIES
  DEFINE_SYMBOL YACL_SHARED
  SOVERSION ${YACL_MAJOR}
  VERSION ${YACL_MAJOR}.${YACL_MINOR}.${YACL_MICRO}
)

FILE(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*")
INSTALL(FILES ${SOURCES} DESTINATION lib/yacl/src)

INSTALL(TARGETS yacl yacl_s
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
)

