# Copyright (c) 2012, Mao Jianjun <justmao945@gmail.com>
# 
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
# 
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN 
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.

#
# Testing directory CMakeLists.txt

IF(BUILD_TESTING)
  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DCOLOR_TERM")
  
  FILE(GLOB TEST_UNITS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
  ADD_LIBRARY(test STATIC ${TEST_UNITS})

  FOREACH(TEST_UNIT ${TEST_UNITS})
    GET_FILENAME_COMPONENT(TEST_UNIT ${TEST_UNIT} NAME)
    MESSAGE(STATUS "Adding test unit: ${TEST_UNIT}")
    STRING(REGEX REPLACE ".c\$" "" TEST_UNIT_OUT "${TEST_UNIT}")
  
    ADD_EXECUTABLE(${TEST_UNIT_OUT} ${TEST_UNIT})
    TARGET_LINK_LIBRARIES(${TEST_UNIT_OUT} test yacl)
    SET_TARGET_PROPERTIES(${TEST_UNIT_OUT}
      PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} -DTEST_MAIN"
    )
  
    ADD_EXECUTABLE(${TEST_UNIT_OUT}_s ${TEST_UNIT})
    TARGET_LINK_LIBRARIES(${TEST_UNIT_OUT}_s test yacl_s)
    SET_TARGET_PROPERTIES(${TEST_UNIT_OUT}_s
      PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} -DTEST_MAIN"
    )
  ENDFOREACH(TEST_UNIT)
ENDIF(BUILD_TESTING)


